# pawse

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.docs/: icons.md  macos-media-integration.md  project.md
.docs/docs/: index.md
.github/workflows/: release.yml
assets/app-icon/: icon.icns
crates/audio_common/: Cargo.toml
crates/audio_common/src/: lib.rs
crates/audio_decoder/: Cargo.toml
crates/audio_decoder/src/: decoder.rs
crates/audio_dsp/: Cargo.toml
crates/audio_dsp/src/: lib.rs
crates/audio_engine/: Cargo.toml  SPEC.md
crates/audio_engine/src/: engine.rs  engine_manager.rs  engine_v2.rs  lib.rs  main.rs  output.rs  types.rs
crates/audio_engine/src/test/: main.rs
crates/audio_output/: Cargo.toml
crates/audio_output/src/: bit_perfect.rs  cpal_stream.rs  device.rs  lib.rs  output.rs  output_stream.rs  ring_buffer.rs
crates/audio_output/src/exclusive/: macos.rs  mod.rs  render.rs  unsupported.rs
crates/audio_output/src/exclusive/linux/: device.rs  format.rs  mod.rs  volume.rs
crates/audio_output/src/exclusive/macos/: cf.rs  format.rs  hog.rs  ioproc.rs  listeners.rs  mod.rs  sample_rate.rs  sleep.rs
crates/audio_output/src/exclusive/windows/: device.rs  format.rs  mod.rs  sleep.rs  volume.rs
crates/cue_parser/: Cargo.toml
crates/cue_parser/src/: lib.rs  parser.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: doc.md  lib.rs
crates/gpui-test/: Cargo.toml
crates/gpui-test/src/: main.rs
crates/lyrics/: Cargo.toml
crates/lyrics/src/: doc.md  lib.rs  parser.rs  web.rs
crates/macos_integration/: Cargo.toml
crates/macos_integration/src/: app_icon.rs  lib.rs  now_playing.rs  remote_command.rs  status_bar.rs
crates/media_integration/: Cargo.toml
crates/media_integration/src/: doc.md  lib.rs  souvlaki_backend.rs
crates/media_integration/src/macos/: app_icon.rs  mod.rs  now_playing.rs  remote_command.rs
crates/music_indexer/: Cargo.toml
crates/music_indexer/examples/: index.rs
crates/music_indexer/src/: cue.rs  doc.md  error.rs  indexer.rs  lib.rs  metadata.rs  pipeline.rs  scanner.rs  types.rs
crates/music_library/: Cargo.toml
crates/music_library/migrations/: 001_initial_schema.sql
crates/music_library/src/: db.rs  error.rs  lib.rs  migrations.rs  models.rs  repository.rs  sqlite.rs  thumbnail.rs
crates/music_library/src/repositories/: album.rs  artist.rs  mod.rs  track.rs
crates/pawse/: Cargo.toml  Info.plist  build.rs
crates/pawse/src/: app_menu.rs  audio_settings.rs  cover_art_cache.rs  cover_mode_view.rs  cover_volume.rs  error_bridge.rs  footer.rs  keyboard_shortcuts.rs  library_service.rs  library_watcher.rs  like_button.rs  localization.rs  lyrics_view.rs  main.rs  main_view.rs  media_bridge.rs  next_button.rs  now_playing.rs  onboarding_view.rs  play_button.rs  playback_queue.rs  playlist_buttons.rs  playlist_popup.rs  prev_button.rs  queue_button.rs  queue_view.rs  repeat_button.rs  row_style.rs  services.rs  settings_store.rs  settings_view.rs  shuffle_button.rs  single_instance.rs  theme_colors.rs  themes.rs  track_duration.rs  track_progress_slider.rs  volume.rs  window_title_bar.rs
crates/pawse/src/library_views/: album_info.rs  albums_view.rs  artist_tracks_view.rs  artists_view.rs  doc.md  fuzzy.rs  library_view.rs  liked_view.rs  mod.rs  playlist_tracks_view.rs  playlists_view.rs  track_row.rs  tracks_view.rs
crates/pawse/src/track_list/: doc.md  like_button.rs  mod.rs  playlist_buttons.rs  queue_button.rs  row_style.rs
crates/pawse_remote/: Cargo.toml  build.rs
crates/pawse_remote/src/: assets.rs  http.rs  lib.rs
crates/pawse_remote/tests/: smoke.rs
crates/ui/: Cargo.toml
crates/ui/src/: app_menu.rs  assets.rs  footer.rs  library_service.rs  main.rs  main_view.rs  media_bridge.rs  next_button.rs  now_playing.rs  play_button.rs  playback_queue.rs  prev_button.rs  services.rs  track_progress_slider.rs  volume.rs
crates/ui/src/library_views/: albums_view.rs  library_view.rs  mod.rs  tracks_view.rs
crates/ui_components/: Cargo.toml
crates/ui_components/src/: artist_avatar.rs  cover_placeholder.rs  cover_thumb.rs  doc.md  fade.rs  lib.rs  settings.rs  settings_doc.md  slider.rs  slider_doc.md
crates/ui_resources/: Cargo.toml  build.rs
crates/ui_resources/src/: assets.rs  doc.md  lib.rs  themes.rs
crates/ui_resources/src/i18n/: cs.rs  de.rs  en.rs  es.rs  fr.rs  hi.rs  id.rs  it.rs  ja.rs  ko.rs  mod.rs  nl.rs  pl.rs  pt.rs  ru.rs  sv.rs  th.rs  tr.rs  uk.rs  vi.rs  zh.rs
crates/updater/: Cargo.toml
crates/updater/src/: doc.md  github.rs  lib.rs  version.rs
crates/updater/src/install/: doc.md  linux.rs  macos.rs  mod.rs  windows.rs
docs/: exclusive-audio-mode.md
scripts/: enable_macos_signing.py  gen-icons.sh  png2ico.py  stamp_version.py
scripts/macos/: create-signing-cert.sh
test_cpal/: Cargo.toml
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css  main.ts
web/src/lib/: connection.svelte.ts
