[workspace]
resolver = "2"
members = [
    "crates/audio_common",
    "crates/audio_decoder",
    "crates/audio_output",
    "crates/audio_engine",
    "crates/music_library",
    "crates/music_indexer",
    "crates/media_integration",
    "crates/macos_integration",
    "crates/ui",
    "crates/ui_components"
]

default-members = ["crates/ui"]


[workspace.package]
publish = false
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
anyhow = "1.0"
rust-embed = "8"

[workspace.lints.rust]
unsafe_code = "forbid"
