[workspace]
resolver = "2"
members = [
    "crates/audio_common",
    "crates/audio_decoder",
    "crates/audio_output",
    "crates/audio_engine",
    "crates/music_library",
    "crates/music_indexer",
    "crates/media_integration",
    "crates/macos_integration",
    "crates/pawse",
    "crates/ui_components",
    "crates/cue_parser"
]

default-members = ["crates/pawse"]


[workspace.package]
publish = false
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
anyhow = "1.0"
rust-embed = "8"

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "forbid"
