[workspace]
resolver = "2"
members = [
    "crates/audio_common",
    "crates/audio_decoder",
    "crates/audio_output",
    "crates/audio_engine",
    "crates/music_library",
    "crates/music_indexer",
    "crates/media_integration",
    "crates/pawse",
    "crates/ui_components",
    "crates/ui_resources",
    "crates/cue_parser",
    "crates/diagnostics",
    "crates/updater",
    "crates/lyrics"
]

default-members = ["crates/pawse"]


[workspace.package]
publish = false
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
anyhow = "1.0"
rust-embed = "8"
log = "0.4"
diagnostics = { path = "crates/diagnostics" }

[profile.release]
debug = false
lto = "thin"
codegen-units = 16

[workspace.lints.rust]
unsafe_code = "forbid"
