[package]
name = "audio_engine"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
audio_common = { path = "../audio_common" }
audio_decoder = { path = "../audio_decoder" }
audio_output = { path = "../audio_output" }
ringbuf = "0.4"
anyhow = { workspace = true }
tokio = "1.50.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "audio_engine_test"
path = "src/test/main.rs"
