[package]
name = "audio_output"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
audio_common = { path = "../audio_common" }
anyhow = { workspace = true }

cpal = "0.17.3"
rb = "0.4"
parking_lot = "0.12.5"
atomic_float = "1.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = { version = "0.14", features = ["core_audio", "audio_toolbox"] }

[lib]
path = "src/output.rs"
