[package]
name = "audio_output"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
audio_common = { path = "../audio_common" }
anyhow = { workspace = true }

cpal = "0.17.3"
rb = "0.4"
parking_lot = "0.12.5"
atomic_float = "1.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-audio = "=0.3.2"
objc2-core-audio-types = "=0.3.2"

[lints.rust]
unsafe_code = "allow"

[lib]
path = "src/output.rs"
