[package]
name = "gpui-test"
version.workspace = true
edition.workspace = true
publish = false
license = "MIT"

[[bin]]
name = "gpui-test"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
audio_engine = { path = "../audio_engine" }
audio_output = { path = "../audio_output" }

[target.'cfg(target_os = "macos")'.package.metadata]
# Required for accessing Music folder
gpui.music-playback-access = true