[package]
name = "lyrics"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"

[dev-dependencies]
rstest = "0.21"

[lints]
workspace = true
