[package]
name = "macos_integration"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
media_integration = { path = "../media_integration" }
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"
objc2-media-player = "0.3.2"
objc2-core-foundation = "0.3.2"
block2 = "0.6.2"
flume = "0.12.0"

[lints.rust]
unsafe_code = "allow"
