[package]
name = "media_integration"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
flume = "0.12.0"
log = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"
objc2-media-player = "0.3.2"
objc2-core-foundation = "0.3.2"
block2 = "0.6.2"

[target.'cfg(target_os = "windows")'.dependencies]
souvlaki = "0.8"

# Pure-Rust zbus backend so Linux builds don't need system libdbus headers.
[target.'cfg(target_os = "linux")'.dependencies]
souvlaki = { version = "0.8", default-features = false, features = ["use_zbus"] }

[lints.rust]
unsafe_code = "allow"
