[package]
name = "music_indexer"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
music_library = { path = "../music_library" }
cue_parser = { path = "../cue_parser" }
anyhow = { workspace = true }
log = { workspace = true }
lofty = "0.22.0"
jwalk = "0.8"
flume = "0.12.0"
encoding_rs = "0.8"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
