[package]
name = "music_library"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
rusqlite = { version = "0.34.0", features = ["bundled"] }
thiserror = "1.0"
dirs = "6.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
sha2 = "0.10"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
