[package]
name = "pawse"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "pawse"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
audio_engine = { path = "../audio_engine" }
audio_output = { path = "../audio_output" }
music_library = { path = "../music_library" }
music_indexer = { path = "../music_indexer" }
rfd = "0.15"
flume = "0.12.0"
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
ui_components = { path = "../ui_components" }
media_integration = { path = "../media_integration" }
rust-embed.workspace = true
nucleo-matcher = "0.3"
rand = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
macos_integration = { path = "../macos_integration" }

[package.metadata.bundle]
name = "Pawse"
identifier = "dev.pawse.app"
icon = ["../../assets/pawse.svg"]
version = "0.1.0"
copyright = ""
category = "Music"

[lints]
workspace = true
