[package]
name = "pawse"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "pawse"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
audio_engine = { path = "../audio_engine" }
audio_output = { path = "../audio_output" }
music_library = { path = "../music_library" }
music_indexer = { path = "../music_indexer" }
lyrics = { path = "../lyrics" }
diagnostics = { workspace = true }
log = { workspace = true }
rfd = "0.15"
flume = "0.12.0"
notify = "7"
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
ui_components = { path = "../ui_components" }
ui_resources = { path = "../ui_resources" }
media_integration = { path = "../media_integration" }
updater = { path = "../updater" }
sys-locale = "0.3"
nucleo-matcher = "0.3"
rand = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
interprocess = "2"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6.2"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[package.metadata.packager]
product-name = "Pawse"
identifier = "dev.pawse.app"
category = "Music"
icons = [
    "../ui_resources/assets/app-icon/32x32.png",
    "../ui_resources/assets/app-icon/128x128.png",
    "../ui_resources/assets/app-icon/128x128@2x.png",
    "../ui_resources/assets/app-icon/icon.icns",
    "../ui_resources/assets/app-icon/icon.ico",
]

[package.metadata.packager.macos]
minimum-system-version = "10.15"
info-plist-path = "Info.plist"

[package.metadata.packager.nsis]
installer-mode = "currentUser"

[lints]
workspace = true
