[package]
name = "pawse_remote"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt", "net", "sync", "time", "io-util"] }
rust-embed.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow.workspace = true
log.workspace = true

[lints]
workspace = true
