[package]
name = "ui"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "ui"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
audio_engine = { path = "../audio_engine" }
audio_output = { path = "../audio_output" }
music_library = { path = "../music_library" }
music_indexer = { path = "../music_indexer" }
rfd = "0.15"
flume = "0.12.0"
anyhow.workspace = true
ui_components = { path = "../ui_components" }
media_integration = { path = "../media_integration" }
rust-embed.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
macos_integration = { path = "../macos_integration" }

[package.metadata.bundle]
name = "Pawse"
identifier = "dev.pawse.app"
icon = ["../../assets/icons/play.svg"]
version = "0.1.0"
copyright = ""
category = "Music"
