[package]
name = "updater"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "updater"
path = "src/lib.rs"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
anyhow.workspace = true
log.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
ureq = "2"

[target.'cfg(target_os = "macos")'.dependencies]
tempfile = "3"

[target.'cfg(target_os = "windows")'.dependencies]
dirs = "5"

[lints]
workspace = true
